tests/checker/diagnostics/0930_gadt_pair_constructor_payload_mismatch_07.ml.infer.expected
File "0930_gadt_pair_constructor_payload_mismatch_07.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0930_gadt_pair_constructor_payload_mismatch_07 is not a valid module name.

File "0930_gadt_pair_constructor_payload_mismatch_07.ml", line 5, characters 46-50:
5 | let _ : (int * bool) pair_box_eta = Pair_eta (true, 6)
                                                  ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
